--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Hello, Blockstack</title>
+    <meta charset="utf-8" />
+    <title>Read the Lightning!</title>
   </head>
   <body>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
   </body>
 </html>
