--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <meta charset="utf-8" />
     <title>Read the Lightning!</title>
   </head>
