--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <meta charset="utf-8" />
-    <title>Read the Lightning!</title>
+    <title>Prism- Your Keys, Your Content. Own the discussion.</title>
   </head>
   <body>
     <div id="root"></div>
