--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <meta charset="utf-8" />
     <title>Prism- Your Keys, Your Content. Own the conversation.</title>
   </head>
